# tritonc

./: .gitmodules  CMakeLists.txt  README.md  add_kernel.ttir  attn_fwd_autotune.ttir  matmul_autotune.ttir  matmul_autotune_bak.ttir  matmul_autotune_fp16acc.ttir
include_hacks/: fake_except_assert.h
src/: autotuner.cpp  autotuner.h  kernel_runner.cpp  kernel_runner.h  main.cpp  templating.cpp  templating.h  tinyscript.cpp  tinyscript.h  tritonc.cpp  tritonc.h
